Updated New.html with recent changes

--- a/New.html
+++ b/New.html
@@ -7,7 +7,7 @@
           const lat = position.coords.latitude;
           const long = position.coords.longitude;
           google.script.run.saveLocation(lat, long);
-          document.body.innerHTML = "<h3>Thank you! Your location has been recorded.</h3>";
+          document.body.innerHTML = "<h3>Thank you! Your location has been recordeddd.</h3>";
         });
       } else {
         document.body.innerHTML = "<h3>Geolocation is not supported by your browser.</h3>";
